erDiagram
    sets {
        string set_num PK "Primary Key"
        string name
        int year
        int theme_id FK "Foreign Key to themes"
        int num_parts
    }
    themes {
        int id PK "Primary Key"
        string name
        int parent_id FK "Self-referencing FK to themes"
    }
    parts {
        string part_num PK "Primary Key"
        string name
        int part_cat_id FK "Foreign Key to part_categories"
    }
    part_categories {
        int id PK "Primary Key"
        string name
    }
    colors {
        int id PK "Primary Key"
        string name
        string rgb
        string is_trans
    }
    inventories {
        int id PK "Primary Key"
        int version
        string set_num FK "Foreign Key to sets"
    }
    inventory_parts {
        int inventory_id FK "Foreign Key to inventories"
        string part_num FK "Foreign Key to parts"
        int color_id FK "Foreign Key to colors"
        int quantity
        boolean is_spare
        %% Composite PK (inventory_id, part_num, color_id, is_spare) - Implied %%
    }

     %% Relationships %%
    sets ||--o{ inventories : "has"
    sets }o--|| themes : "belongs to"
    themes ||--o{ themes : "can contain" 
    %% Self-referencing relationship %%

    inventories ||--|{ inventory_parts : "contains parts"

    parts }o--|| inventory_parts : "appears in inventory"
    parts }o--|| part_categories : "belongs to"

    colors }o--|| inventory_parts : "available in inventory"
